Tried to fix overflow

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
 #demos_nav {
     font-size: xx-large;
     margin-top: 5%;
-    margin-left: 50%;
+    margin-left: 45%;
     display: flex;
     flex-direction: column;
 }
